fix spacing

--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -59,7 +59,7 @@ div[id^="sidebar-icon-"] {
 
 .sidebar-external-links {
   display: flex;
-  margin-top: 10px;
+  margin-top: 8px;
 }
 
 .external-link-button-small {
